# solstice

./: .gitignore  Cargo.toml  run.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
Honeyland Unstaker/: burn.html  check.js  check10.js  check2.js  check3.js  check4.js  check5.js  check6.js  check7.js  check8.txt  check9.js  check_stuck.js  index.html  recovery.html  serve.js  simulate_payload.js
Honeyland-Unstaker-Github Files/: README.md  _headers  classifier.html  index.html  manifest.json  sw.js
crates/solstice-api/: Cargo.toml
crates/solstice-api/src/: dto.rs  error.rs  handlers.rs  lib.rs  server.rs  state.rs  websocket.rs
crates/solstice-api/tests/: integration_tests.rs
crates/solstice-blockchain/: Cargo.toml
crates/solstice-blockchain/examples/: devnet_dry_run.rs  gen_devnet_keypair.rs
crates/solstice-blockchain/src/: accounts.rs  client.rs  error.rs  lib.rs  simulation.rs  transaction.rs  types.rs  wallet.rs
crates/solstice-blockchain/tests/: integration_tests.rs
crates/solstice-core/: Cargo.toml
crates/solstice-core/src/: error.rs  lib.rs  logging.rs  types.rs
crates/solstice-core/tests/: integration_tests.rs
crates/solstice-dex/: Cargo.toml
crates/solstice-dex/src/: aggregator.rs  error.rs  jupiter.rs  lib.rs  orca.rs  raydium.rs  traits.rs  types.rs
crates/solstice-dex/tests/: integration_tests.rs
crates/solstice-execution/: Cargo.toml
crates/solstice-execution/src/: error.rs  lib.rs  order_manager.rs  planner.rs  position_sizing.rs  swap.rs
crates/solstice-execution/src/jito/: bundle.rs  client.rs  error.rs  fallback.rs  mod.rs  tip.rs
crates/solstice-execution/src/live/: config.rs  engine.rs  mod.rs
crates/solstice-execution/src/risk/: limits.rs  mod.rs  monitor.rs  pretrade.rs  stop_loss.rs  take_profit.rs
crates/solstice-market-data/: Cargo.toml
crates/solstice-market-data/src/: cache.rs  error.rs  lib.rs  manager.rs
crates/solstice-market-data/src/yellowstone/: client.rs  config.rs  filter.rs  mod.rs  parser.rs
crates/solstice-simulation/: Cargo.toml
crates/solstice-simulation/src/: demo.rs  engine.rs  error.rs  lib.rs
crates/solstice-simulation/src/backtest/: data.rs  engine.rs  fill_model.rs  mod.rs  optimize.rs  report.rs
crates/solstice-storage/: Cargo.toml
crates/solstice-storage/migrations/: 0001_init.sql
crates/solstice-storage/src/: cache.rs  config.rs  error.rs  lib.rs  models.rs  pool.rs
crates/solstice-storage/tests/: integration_tests.rs
crates/solstice-strategy/: Cargo.toml
crates/solstice-strategy/src/: config.rs  deduplicator.rs  error.rs  fair_value.rs  lib.rs  manager.rs  portfolio.rs  ranker.rs  stat_arb.rs  strategy.rs  types.rs  validator.rs
crates/solstice-strategy/src/strategies/: mod.rs  sma.rs  spread_arb.rs
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  types.ts  useEngineEvents.ts  useLiveEvents.ts  usePolling.ts
dashboard/src/components/: EventFeed.tsx  Layout.tsx  PositionsTable.tsx  PriceChart.tsx  StatTile.tsx  ToggleSwitch.tsx  TradesTable.tsx
dashboard/src/pages/: LiveTradingPage.tsx  OverviewPage.tsx  PerformancePage.tsx  PositionsPage.tsx  TradesPage.tsx  WalletPage.tsx
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DESIGN_RATIONALE.md  DEX_INTEGRATIONS.md  MARKET_DATA.md  RISK_MANAGEMENT.md  ROADMAP.md  SOLANA_RPC.md  STRATEGY_FRAMEWORK.md  TABLE_OF_CONTENTS.md  WORKSPACE.md  YELLOWSTONE.md
solana-trading-bot/: .env.example  .gitignore  README.md  package-lock.json  package.json
solana-trading-bot/docs/: ARCHITECTURE.md
