[workspace]
members = [
    "crates/solstice-core",
    "crates/solstice-blockchain",
    "crates/solstice-market-data",
    "crates/solstice-storage",
    "crates/solstice-dex",
    "crates/solstice-strategy",
    "crates/solstice-execution",
    "crates/solstice-simulation",
    "crates/solstice-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Solstice Team"]
license = "MIT"
repository = "https://github.com/chuzby-dev/solstice"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "ansi", "env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
solana-sdk = "2.2"
solana-client = "2.2"
solana-account-decoder-client-types = "2.2"
tonic = "0.14"

# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
