[package]
name = "solstice-dex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Unified DEX integration layer: quotes, routing, and swap building"

[dependencies]
solstice-core = { path = "../solstice-core" }
solstice-blockchain = { path = "../solstice-blockchain" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
solana-sdk = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lru = "0.12"
base64 = "0.22"
raydium_amm = { version = "0.1.13", default-features = false }
orca_whirlpools_client = "8.0.0"
orca_whirlpools_core = "2.1.0"
solana-pubkey-v3 = { package = "solana-pubkey", version = "3" }
solana-instruction-v3 = { package = "solana-instruction", version = "3" }
spl-associated-token-account-interface = "2.0.0"

[dev-dependencies]
tokio-test = { workspace = true }
