[package]
name = "solstice-execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Position sizing, risk management, and execution planning"

[dependencies]
solstice-core = { path = "../solstice-core" }
solstice-dex = { path = "../solstice-dex" }
solstice-strategy = { path = "../solstice-strategy" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
solana-sdk = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
