[package]
name = "solstice-execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Position sizing, risk management, and execution planning"

[dependencies]
solstice-core = { path = "../solstice-core" }
solstice-blockchain = { path = "../solstice-blockchain" }
solstice-dex = { path = "../solstice-dex" }
solstice-strategy = { path = "../solstice-strategy" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
solana-sdk = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
bincode = "1.3"

[dev-dependencies]
tokio-test = { workspace = true }
async-trait = "0.1"
