[package]
name = "solstice-strategy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Pluggable strategy framework: signal generation and coordination"

[dependencies]
solstice-core = { path = "../solstice-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
solana-sdk = { workspace = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
